edition = "2023";  // successor to proto2 and proto3

package v1;
import "google/protobuf/go_features.proto";

option go_package = "./api/v1;v1";
option java_package = "io.stackrox.proto.api.v1";
option features.(pb.go).api_level = API_HYBRID;

message NetworkPolicyNotification {
  string cluster = 1;
  string yaml = 2;
}
