edition = "2023";  // successor to proto2 and proto3

package storage;

import "google/protobuf/timestamp.proto";
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

// Any properties of an individual service account.
// (regardless of time, scope, or context)
//////////////////////////////////////////
message ServiceAccount {
  string id = 1; // @gotags: sql:"pk,type(uuid)"
  string name = 2; // @gotags: search:"Service Account,store"
  string namespace = 3; // @gotags: search:"Namespace,store"
  string cluster_name = 4; // @gotags: search:"Cluster,store"
  string cluster_id = 5; // @gotags: search:"Cluster ID,store,hidden" sql:"type(uuid)"
  map<string, string> labels = 6 [lazy = true]; // @gotags: search:"Service Account Label"
  map<string, string> annotations = 7 [lazy = true]; // @gotags: search:"Service Account Annotation"
  google.protobuf.Timestamp created_at = 8 [lazy = true];
  bool automount_token = 9;

  repeated string secrets = 10;
  repeated string image_pull_secrets = 11;
}
